Adds OwnerCmd