@@ -12,7 +12,6 @@ public class EnableCommandCmd extends BaseCmd {
 
     public EnableCommandCmd() {
         super(CommandCategory.OWNER, CommandPermission.OWNER, "enable_command", "Enable/disable a command");
-
         this.addOption("command", "The command to enable/disable", true, ApplicationCommandOptionType.STRING);
         this.addOption("enabled", "True to enable, false to disable", true, ApplicationCommandOptionType.BOOLEAN);
     }
@@ -22,16 +21,16 @@ public class EnableCommandCmd extends BaseCmd {
         final String commandName = context.getOptionAsString("command").orElseThrow();
         final BaseCmd cmd = CommandManager.getInstance().getCommand(commandName);
         if (cmd == null) {
-            throw new CommandException(String.format("Command `%s` not found.", commandName));
+            return Mono.error(new CommandException("Command `%s` not found.".formatted(commandName)));
         }
 
         final boolean enabled = context.getOptionAsBool("enabled").orElseThrow();
         cmd.setEnabled(enabled);
 
-        DEFAULT_LOGGER.info("Command {} {}", cmd.getName(), enabled ? "enabled" : "disabled");
+        final String enabledStr = enabled ? "enabled" : "disabled";
+        DEFAULT_LOGGER.info("Command {} {}", cmd.getName(), enabledStr);
 
-        return context.createFollowupMessage(Emoji.CHECK_MARK + " Command `%s` %s",
-                commandName, enabled ? "enabled" : "disabled");
+        return context.createFollowupMessage(Emoji.CHECK_MARK + " Command `%s` %s", commandName, enabledStr);
     }
 
 }
